--- a/films/templates/partials/footer.html
+++ b/films/templates/partials/footer.html
@@ -1,9 +1,13 @@
-<div class="container">
-    <div class="row">
-        <div class="col-4"> Site Details </div>div>
-        <div class="col-4"> Contact Info </div>div>
-        <div class="col-4"> Site Map </div>div>
+<footer>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-4"> Site Details </div>
+            <div class="col-4"> Contact Info </div>
+            <div class="col-4"> Site Map </div>
+
+        </div>
 
     </div>
 
-</div>
+</footer>
