--- a/films/templates/partials/base.html
+++ b/films/templates/partials/base.html
@@ -1,3 +1,4 @@
+{% load bootstrap5 %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,24 +6,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-    <title>{% block title %}{% endblock %}</title>
+    <title>IMDI {% block title %}{% endblock %}</title>
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
+
+    {% block css %}
+    {% endblock %}
 </head>
 
 <body>
     {% include 'partials/navbar.html' %}
 
-    <div class="container">
+    <div class="container" id="content-container">
         {% block content %}
         {% endblock %}
     </div>
 
-    {% include 'partials/footer.html' %}
 
+    {% include 'partials/footer.html' %}
+    {% block javascript %}
+    {% endblock %}
 
 </body>
 
